adds stiles to form

--- a/index.html
+++ b/index.html
@@ -97,24 +97,23 @@
             <form class="aplication-form">
               <label for="" class="form-name">
                 Имя
-                <input type="name" name="name">
+                <input type="name" name="name" class="form-fiend">
               </label>
               <label for="tel" class="form-tel">
                 Телефон
-                <input type="text">
+                <input type="text" class="form-fiend">
               </label>
               <label for="" class="form-mail">
                 Почта
-                <input type="text">
+                <input type="text" class="form-fiend">
               </label>
               <label for="" class="form-comment">
                 Комментарий
               <textarea name="comment" id="" rows="10"></textarea>
             </label>
-            <label for="">
-              <p></p>
-              <a href=""></a>
+            <label for="" class="form-checkbox">
               <input type="checkbox">
+              <p>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
             </label>
             </form>
             <button type="submit">Отправить</button>
