adds design form

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
               </label>
               <label for="" class="form-comment">
                 Комментарий
-              <textarea name="comment" id="" rows="10"></textarea>
+              <textarea name="comment" id="" rows="10" placeholder="Введите текст" class="comment-form"></textarea>
             </label>
             <label for="" class="form-checkbox">
-              <input type="checkbox">
-              <p>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
+              <input type="checkbox" class="checkbox-btn">
+              <p class="conditions">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
             </label>
             </form>
-            <button type="submit">Отправить</button>
+            <button type="submit" class="btn-submit">Отправить</button>
           </div>
         </div>
       </section>
