Оформляет кнопку в футере

--- a/index.html
+++ b/index.html
@@ -85,19 +85,15 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
              <button type="button" class="close-modal-btn" data-modal-close>
-              <svg class="close-icon-btn">
-                <use
-                  href="./images/icon/icons.svg#icon-close"
-                  height="18"
-                  width="18"
-                ></use>
-              </svg>
             </button>
             <b class="modal-aplication">Оставьте свои данные, мы вам перезвоним</b>
             <form class="aplication-form">
               <label for="" class="form-name">
                 Имя
                 <input type="name" name="name" class="form-fiend">
+                <svg>
+                  <use href=""></use>
+                </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
@@ -597,7 +593,9 @@
               class="email-input"
             />
           </form>
-          <button type="button" class="subscribe-btn">Подписаться</button>
+            <button type="button" class="subscribe-btn">Подписаться <svg height="24" width="24" class="btn-icon-subscribe">
+            <use href="./images/icon/icons.svg#icon-telegram"></use>
+          </svg></button>
         </div>
         </div>
       </div>
