--- a/portfolio.html
+++ b/portfolio.html
@@ -378,7 +378,10 @@
               class="email-input"
             />
           </form>
-          <button type="button" class="subscribe-btn">Подписаться</button>
+          <button type="button" class="subscribe-btn">Подписаться <svg height="24" width="24" class="btn-icon-subscribe">
+            <use href="./images/icon/icons.svg#icon-telegram"></use>
+          </svg>
+        </button>
         </div>
       </div>
     </footer>
