--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
              <button type="button" class="close-modal-btn" data-modal-close>
+               <svg height="18px" width="18px">
+                 <use href="./images/icon/icons.svg#icon-close"></use>
+               </svg>
             </button>
             <b class="modal-aplication">Оставьте свои данные, мы вам перезвоним</b>
             <form class="aplication-form">
               <label for="" class="form-name">
                 Имя
                 <input type="name" name="name" class="form-fiend">
-                <svg>
-                  <use href=""></use>
-                </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
