Добавляет иконки в форму модалки

--- a/index.html
+++ b/index.html
@@ -94,14 +94,23 @@
               <label for="" class="form-name">
                 Имя
                 <input type="name" name="name" class="form-fiend">
+                <svg width="18px" height="18px" class="icon-form">
+                  <use href="./images/icon/icons.svg#icon-person-form"></use>
+                </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
                 <input type="text" class="form-fiend">
+                <svg width="18px" height="18px" class="icon-form">
+                  <use href="./images/icon/icons.svg#icon-tel-form"></use>
+                </svg>
               </label>
               <label for="" class="form-mail">
                 Почта
                 <input type="text" class="form-fiend">
+                <svg width="18px" height="18px" class="icon-form">
+                  <use href="./images/icon/icons.svg#icon-mail-form"></use>
+                </svg>
               </label>
               <label for="" class="form-comment">
                 Комментарий
