Заканчивает оформление модального окна

--- a/index.html
+++ b/index.html
@@ -84,42 +84,62 @@
 
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-             <button type="button" class="close-modal-btn" data-modal-close>
-               <svg height="18px" width="18px">
-                 <use href="./images/icon/icons.svg#icon-close"></use>
-               </svg>
+            <button type="button" class="close-modal-btn" data-modal-close>
+              <svg height="18px" width="18px">
+                <use href="./images/icon/icons.svg#icon-close"></use>
+              </svg>
             </button>
-            <b class="modal-aplication">Оставьте свои данные, мы вам перезвоним</b>
+            <b class="modal-aplication"
+              >Оставьте свои данные, мы вам перезвоним</b
+            >
             <form class="aplication-form">
               <label for="" class="form-name">
                 Имя
-                <input type="name" name="name" class="form-fiend">
+                <input type="name" name="name" class="form-fiend" />
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-person-form"></use>
                 </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
-                <input type="text" class="form-fiend">
+                <input type="text" class="form-fiend" />
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-tel-form"></use>
                 </svg>
               </label>
               <label for="" class="form-mail">
                 Почта
-                <input type="text" class="form-fiend">
+                <input type="text" class="form-fiend" />
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-mail-form"></use>
                 </svg>
               </label>
               <label for="" class="form-comment">
                 Комментарий
-              <textarea name="comment" id="" rows="10" placeholder="Введите текст" class="comment-form"></textarea>
-            </label>
-            <label for="" class="form-checkbox">
-              <input type="checkbox" class="checkbox-btn">
-              <p class="conditions">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></p>
-            </label>
+                <textarea
+                  name="comment"
+                  id=""
+                  rows="10"
+                  placeholder="Введите текст"
+                  class="comment-form"
+                ></textarea>
+              </label>
+              <label for="checkbox" class="form-checkbox">
+                <input
+                  type="checkbox"
+                  class="checkbox-btn visually-hidden"
+                  id="checkbox"
+                />
+                <span class="custom-checkbox">
+                  <svg width="16px" height="15px" class="custom-checkbox-icon">
+                    <use href="./images/icon/icons.svg#icon-check"></use>
+                  </svg>
+                </span>
+                <p class="conditions">
+                  Соглашаюсь с рассылкой и принимаю
+                  <a href="">Условия договора</a>
+                </p>
+              </label>
             </form>
             <button type="submit" class="btn-submit">Отправить</button>
           </div>
@@ -265,7 +285,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg ></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a
@@ -278,7 +299,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -287,7 +309,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -296,7 +319,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -320,7 +344,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -329,7 +354,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -338,7 +364,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -347,7 +374,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -371,7 +399,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -380,7 +409,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -389,7 +419,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -398,7 +429,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -422,7 +454,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -431,7 +464,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -440,7 +474,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -449,7 +484,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg></a>
+                        ></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -557,7 +593,8 @@
                     width="20"
                     height="20"
                     aria-label="instagram"
-                  ></use></svg></a>
+                  ></use></svg
+              ></a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link"
@@ -567,7 +604,8 @@
                     width="20"
                     height="20"
                     aria-label="twitter"
-                  ></use></svg></a>
+                  ></use></svg
+              ></a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link"
@@ -577,7 +615,8 @@
                     width="20"
                     height="20"
                     aria-label="facebook"
-                  ></use></svg></a>
+                  ></use></svg
+              ></a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
@@ -587,7 +626,8 @@
                     width="20"
                     height="20"
                     aria-label="linkedin"
-                  ></use></svg></a>
+                  ></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -595,17 +635,20 @@
           <p class="subscribe-text">Подпишитесь на рассылку</p>
           <div class="subscribe-footer">
             <form class="email-form">
-            <input
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              class="email-input"
-            />
-          </form>
-            <button type="button" class="subscribe-btn">Подписаться <svg height="24" width="24" class="btn-icon-subscribe">
-            <use href="./images/icon/icons.svg#icon-telegram"></use>
-          </svg></button>
-        </div>
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="email-input"
+              />
+            </form>
+            <button type="button" class="subscribe-btn">
+              Подписаться
+              <svg height="24" width="24" class="btn-icon-subscribe">
+                <use href="./images/icon/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
