--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
               >Оставьте свои данные, мы вам перезвоним</b
             >
             <form class="aplication-form">
-              <label for="" class="form-name">
+              <label for="name" class="form-name">
                 Имя
-                <input type="name" name="name" class="form-fiend" />
+                <input type="name" name="name" class="form-fiend" id="name"/>
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-person-form"></use>
                 </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
-                <input type="text" class="form-fiend" />
+                <input type="text" class="form-fiend" id="tel"/>
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-tel-form"></use>
                 </svg>
               </label>
-              <label for="" class="form-mail">
+              <label for="mail" class="form-mail">
                 Почта
-                <input type="text" class="form-fiend" />
+                <input type="text" class="form-fiend" id="mail"/>
                 <svg width="18px" height="18px" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-mail-form"></use>
                 </svg>
