--- a/index.html
+++ b/index.html
@@ -95,30 +95,30 @@
             <form class="aplication-form">
               <label for="name" class="form-name">
                 Имя
-                <input type="name" name="name" class="form-fiend" id="name"/>
+                <input type="name" name="user-name" class="form-fiend" id="name"/>
                 <svg width="18" height="18" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-person-form"></use>
                 </svg>
               </label>
               <label for="tel" class="form-tel">
                 Телефон
-                <input type="text" class="form-fiend" name="tel" id="tel"/>
+                <input type="text" class="form-fiend" name="user-tel" id="tel"/>
                 <svg width="18" height="18" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-tel-form"></use>
                 </svg>
               </label>
               <label for="mail" class="form-mail">
                 Почта
-                <input type="text" class="form-fiend" name="mail" id="mail"/>
+                <input type="text" class="form-fiend" name="user-mail" id="mail"/>
                 <svg width="18" height="18" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-mail-form"></use>
                 </svg>
               </label>
-              <label for="" class="form-comment">
+              <label for="comment" class="form-comment">
                 Комментарий
                 <textarea
-                  name="comment"
-                  id=""
+                  name="user-comment"
+                  id="comment"
                   rows="10"
                   placeholder="Введите текст"
                   class="comment-form"
@@ -129,7 +129,7 @@
                   type="checkbox"
                   class="checkbox-btn visually-hidden"
                   id="checkbox"
-                  name="checkbox"
+                  name="form-checkbox"
                 />
                 <span class="custom-checkbox">
                   <svg width="16" height="15" class="custom-checkbox-icon">
