--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
               >Оставьте свои данные, мы вам перезвоним</b
             >
             <form class="aplication-form">
-              <label for="name" class="form-name">
+              <label for="user-name" class="form-name">
                 Имя
-                <input type="name" name="user-name" class="form-fiend" id="name"/>
+                <input type="name" name="user-name" class="form-fiend" id="user-name"/>
                 <svg width="18" height="18" class="icon-form">
                   <use href="./images/icon/icons.svg#icon-person-form"></use>
                 </svg>
@@ -136,10 +136,10 @@
                     <use href="./images/icon/icons.svg#icon-check"></use>
                   </svg>
                 </span>
-                <p class="conditions">
+                <span class="conditions">
                   Соглашаюсь с рассылкой и принимаю
                   <a href="" class="conditions-link">Условия договора</a>
-                </p>
+                </span>
               </label>
               <button type="submit" class="btn-submit">Отправить</button>
             </form>
