--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a
@@ -301,8 +301,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -311,8 +311,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -321,8 +321,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -346,8 +346,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -356,8 +356,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -366,8 +366,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -376,8 +376,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -401,8 +401,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -411,8 +411,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -421,8 +421,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -431,8 +431,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -456,8 +456,8 @@
                           href="./images/icon/icons.svg#icon-instagram"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -466,8 +466,8 @@
                           href="./images/icon/icons.svg#icon-twitter"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -476,8 +476,8 @@
                           href="./images/icon/icons.svg#icon-facebook"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                   <li class="social-item">
                     <a href="" class="network-link" aria-label="Социальная сеть"
@@ -486,8 +486,8 @@
                           href="./images/icon/icons.svg#icon-linkedin"
                           width="20"
                           height="20"
-                        ></use></svg
-                    ></a>
+                        ></use></svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -595,8 +595,8 @@
                     width="20"
                     height="20"
                     aria-label="instagram"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link"
@@ -606,8 +606,8 @@
                     width="20"
                     height="20"
                     aria-label="twitter"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+                </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link"
@@ -617,8 +617,8 @@
                     width="20"
                     height="20"
                     aria-label="facebook"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
@@ -628,8 +628,8 @@
                     width="20"
                     height="20"
                     aria-label="linkedin"
-                  ></use></svg
-              ></a>
+                  ></use></svg>
+              </a>
             </li>
           </ul>
         </div>
